legend for scoreboard, history shows difficulty now, other adjustments

--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -18,7 +18,7 @@
             tools:context=".game.HraFragment">
 
             <ImageView
-                android:id="@+id/questionMarkButtonn"
+                android:id="@+id/questionMarkButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="24dp"
