--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -149,7 +149,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/fredoka"
-        android:text="@string/language"
+        android:text="@string/logout"
         android:textSize="20sp"
         app:cornerRadius="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,14 +157,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch1" />
 
-    <Switch
+    <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
-        android:textColor="@color/black"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Switch"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/anim"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
