--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -241,7 +241,7 @@
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/submitMbutton"
-                            android:layout_width="40dp"
+                            android:layout_width="43dp"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="2dp"
                             android:backgroundTint="@color/buttony"
@@ -369,13 +369,13 @@
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/submitWbutton"
-                            android:layout_width="40dp"
+                            android:layout_width="43dp"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="2dp"
                             android:backgroundTint="@color/buttony"
                             android:elevation="20dp"
                             android:text="W"
-                            android:textColor="@color/white"
+                             android:textColor="@color/white"
                             app:cornerRadius="10dp"
                             tools:ignore="HardcodedText" />
 
@@ -474,16 +474,31 @@
                     android:id="@+id/endButton"
                     android:layout_width="132dp"
                     android:layout_height="48dp"
-                    android:layout_marginTop="32dp"
-                    android:textColor="@color/white"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/buttony"
                     android:elevation="20dp"
                     android:text="Koniec"
+                    android:textColor="@color/white"
                     app:cornerRadius="10dp"
-                    android:backgroundTint="@color/buttony"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/continueButton" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/searchButton"
+                    android:layout_width="132dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/buttony"
+                    android:elevation="20dp"
+                    android:text="@string/word"
+                    android:textColor="@color/white"
+                    app:cornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.504"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/endButton" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
