--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -457,14 +457,17 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/continueButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:textColor="@color/white"
-                    android:text="Pokračovať"
-                    android:elevation="20dp"
-                    app:cornerRadius="10dp"
+                    android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/buttony"
+                    android:elevation="20dp"
+                    android:text="Pokračovať"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:cornerRadius="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.509"
                     app:layout_constraintStart_toStartOf="parent"
@@ -472,14 +475,17 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/endButton"
-                    android:layout_width="132dp"
+                    android:layout_width="0dp"
                     android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/buttony"
                     android:elevation="20dp"
                     android:text="Koniec"
                     android:textColor="@color/white"
-                    app:cornerRadius="10dp"
+                    android:textSize="20sp"
+                    app:cornerRadius="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
@@ -487,14 +493,17 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/searchButton"
-                    android:layout_width="132dp"
+                    android:layout_width="0dp"
                     android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/buttony"
                     android:elevation="20dp"
                     android:text="@string/word"
                     android:textColor="@color/white"
-                    app:cornerRadius="10dp"
+                    android:textSize="20sp"
+                    app:cornerRadius="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
@@ -644,7 +653,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/fredoka"
-                android:text="6"
+                android:text="7"
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="24sp"
