--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -24,15 +24,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/arrow" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/menu"
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="128dp"
+                android:layout_marginTop="200dp"
                 android:layout_marginEnd="16dp"
-                android:hint="Mode"
+                android:hint="@string/categ"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -134,23 +135,35 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/menu" />
 
-        <!--    <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout2"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/wordLangButton"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="?android:textColorSecondary"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="16dp"
+                android:backgroundTint="@color/buttony"
+                android:fontFamily="@font/fredoka"
+                android:text="@string/chooseWordLang"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:cornerRadius="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="165dp">
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/nameInputText"
-                    android:layout_width="match_parent"
-                    android:layout_height="63dp"
-                    android:fontFamily="@font/fredoka"
-                    android:hint="@string/name" />
-            </com.google.android.material.textfield.TextInputLayout>-->
+            <TextView
+                android:id="@+id/wordsLangTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/fredoka"
+                android:textSize="20sp"
+                android:text="@string/wordsLang"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wordLangButton" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
