added behaviour when players guesses all words

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -465,6 +465,7 @@
                     android:backgroundTint="@color/buttony"
                     android:elevation="20dp"
                     android:text="Pokračovať"
+                    android:fontFamily="@font/fredoka"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     app:cornerRadius="20dp"
@@ -480,6 +481,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/fredoka"
                     android:backgroundTint="@color/buttony"
                     android:elevation="20dp"
                     android:text="Koniec"
@@ -498,6 +500,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/fredoka"
                     android:backgroundTint="@color/buttony"
                     android:elevation="20dp"
                     android:text="@string/word"
